<resources>
    <string name="app_name">Mortgage Calculator</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="down_payment_label">Down Payment</string>
    <string name="prop_price_label">Property Price</string>
    <string name="apr_label">APR (%)</string>
    <string name="term_label">Loan Term</string>
    <string name="fifteen_label">15 Years</string>
    <string name="thirty_label">30 Years</string>
    <string name="monthly_payment_label">Monthly Payment</string>
    <string name="monthly_payment_default">$0.00</string>

    <string name="alert_title">Are you sure?</string>
    <string name="clear_alert_msg">This will clear the current calculations.</string>
    <string name="delete_alert_msg">This will delete details and calculation for </string>
    <string name="clear_alert_yes">Yes</string>
    <string name="clear_alert_no">No</string>
    <string name="calc_btn_label">Calculate Monthly Payment</string>
    <string name="err_req_msg">This is required.</string>
    <string name="nav_header_text">Options</string>
    <string name="nav_new_calc_title">New Calculation</string>
    <string name="nav_saved_calc">Saved Calculations</string>
    <string name="proptypelabel">Property Type</string>

    <string name="proptypeprompt">Choose a Type</string>
    <string name="street_label">Street Address</string>
    <string name="city_label">City</string>
    <string name="state_label">State</string>
    <string name="zip_label">Zip</string>
    <string name="save_btn_label">Save Property</string>
    <string name="search_btn_label">Search Address</string>
    <string name="enter_manual">Enter Address</string>
    <string name="search_address">Search Address</string>
    <string name="or">OR</string>
    <string name="no_internet_connection">Please check your internet connection.</string>
    <string-array name="proptypearray">
        <item>House</item>
        <item>Town House</item>
        <item>Condo</item>
    </string-array>

    <string name="address_invalid_message">The address you entered seems invalid. Use \'Search Tool\' rather.</string>
    <string name="property_saved_message">Property has been saved.</string>
    <string name="something_wrong_msg">Something went wrong. Try again.</string>
    <string name="calc_edited_message">Edited calculation has been saved.</string>
    <string name="deleted_message">Property details and calculation have been deleted.</string>
    <string name="edit_title">Calculation for: </string>
    <string name="save_edits_label">Save Edited Calculations</string>
    <string name="down_pmt_grt_thn_prop_price">Down Payment cannot be greater than Property Price.</string>
    <string name="required_fields">Enter a complete address detail.</string>
    <string name="new_calc_title">New Calculation</string>
    <string name="save_prop_title">Save Property</string>
    <string name="map_title">Saved Properties</string>

    <string-array name="statearray">
        <item>AL</item>
        <item>AK</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>DC</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>
</resources>
